--- a/cifv3/webui/cifv3.miner.stoken.modal.html
+++ b/cifv3/webui/cifv3.miner.stoken.modal.html
@@ -7,7 +7,7 @@
             <div class="form-group">
                 <label class="col-xs-4 control-label">TOKEN</label>
                 <div class="col-xs-6">
-                    <textarea ng-model="vm.token" rows="3" class="form-control" placeholder="CIF TokenL"></textarea>
+                    <textarea ng-model="vm.token" rows="3" class="form-control" placeholder="CIF Token"></textarea>
                 </div>
             </div>
         </form>
